syntax = "proto3";

package aether.registry.v1;

option go_package = "github.com/bpalermo/aether/api/aether/registry/v1;registryv1";

message RegistryEntry {
  string pod_name = 1;
  string pod_ns = 2;
  string network_ns = 3;
  string container_id = 4;
  repeated string ips = 5;
  map<string, string> annotations = 6;
}
